Add more cert commands to the notebook

--- a/managed/api-examples/python-simple/get-certificate-expiry.ipynb
+++ b/managed/api-examples/python-simple/get-certificate-expiry.ipynb
@@ -76,9 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List certificates\n",
+    "## List root certificates\n",
     "\n",
-    "List a customer's certificates.\n",
+    "List a customer's root certificates along with expiration dates.\n",
     "\n",
     "ref: https://api-docs.yugabyte.com/docs/yugabyte-platform/5a40faca3973c-list-a-customer-s-certificates"
    ]
@@ -104,6 +104,82 @@
     "          f\"created: {start_date}\\n\"\n",
     "          f\"expiration: {expiry_date}\\n\"\n",
     "          f\"time to expiry: {time_to_expiry}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Show count of expired node-to-node certificates\n",
+    "\n",
+    "Example of retrieving a single prometheus metric; in this case, the count of expired node-to-node certificates per universe.\n",
+    "\n",
+    "ref: https://api-docs.yugabyte.com/docs/yugabyte-platform/732209b7fa9b0-get-prometheus-metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "route = f\"{yba_url}/api/v1/prometheus_metrics\"\n",
+    "response = session.get(url=route)\n",
+    "metrics = response.text\n",
+    "\n",
+    "# Search for lines containing your metric\n",
+    "target_metric = \"ybp_health_check_n2n_cert\"\n",
+    "matching_lines = [line for line in metrics.splitlines() if target_metric in line]\n",
+    "print(\"\\n\".join(matching_lines))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Health check metrics\n",
+    "\n",
+    "Example of parsing values from the large health check output. This pulls the node-to-node and client-to-node certificate days remaining before expiration.\n",
+    "\n",
+    "ref: https://api-docs.yugabyte.com/docs/yugabyte-platform/38a27fa229333-return-results-for-the-last-health-check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hard coded; get this programmatically\n",
+    "universe_uuid = \"asdfasdf-asdf-asdf-asdf-asdfasdfasdf\"\n",
+    "\n",
+    "route = f\"{yba_url}/api/v1/customers/{customer_uuid}/universes/{universe_uuid}/health_check\"\n",
+    "response = session.get(url=route)\n",
+    "metrics = response.json()\n",
+    "\n",
+    "# pprint(metrics)\n",
+    "\n",
+    "health_checks = [\n",
+    "    (item, metric, value)\n",
+    "    for entry in metrics\n",
+    "    for item in entry.get('data', [])\n",
+    "    for metric in item.get('metrics', [])\n",
+    "    for value in metric.get('values', [])\n",
+    "]\n",
+    "    \n",
+    "n2n_validity_days = {\n",
+    "    int(value['value']) \n",
+    "    for _, metric, value in health_checks\n",
+    "    if metric['name'] == 'ybp_health_check_n2n_cert_validity_days'\n",
+    "}\n",
+    "    \n",
+    "c2n_validity_days = {\n",
+    "    int(value['value'])\n",
+    "    for _, metric, value in health_checks\n",
+    "    if metric['name'] == 'ybp_health_check_client_cert_validity_days'\n",
+    "}\n",
+    "    \n",
+    "print(f\"n2n: {n2n_validity_days}\\nc2n: {c2n_validity_days}\") "
    ]
   }
  ],
